--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Santhosh Natarajan</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,28 +41,29 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Santhosh Natarajan</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <h2>I'm a passionate <span>Software Engineer </span> from Coimbatore</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#services">Education</a></li>
+          <li><a href="#services">Recognition</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://github.com/santhosh-natarajan" class="twitter" target="blank"><i class="icofont-github"></i></a>
+        <!-- <a href="#" class="facebook"><i class="icofont-facebook"></i></a> -->
+        <a href="https://stackoverflow.com/users/8854490/sanzmalz" class="instagram" target="blank"><i class="icofont-stack-overflow"></i></a> 
+        <a href="https://www.blogger.com/profile/03681801001667505013" class="google-plus" target="blank"><i class="icofont-blogger"></i></a>
+        <a href="https://www.linkedin.com/in/santhosh-natarajan-0b67847a/" class="linkedin" target="blank"><i class="icofont-linkedin"></i></a>
       </div>
 
     </div>
@@ -746,7 +747,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
   </div>
 
   <!-- Vendor JS Files -->
