--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>My Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>3/21, Bharathi Street, Vilankurichi, Coimbatore - 641035</p>
             </div>
           </div>
 
@@ -1035,14 +1035,14 @@
             <div class="info-box">
               <i class="bx bx-envelope"></i>
               <h3>Email Me</h3>
-              <p>contact@example.com</p>
+              <p>santhosh.swengineer@gmail.com</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 d-flex align-items-stretch">
             <div class="info-box">
               <i class="bx bx-phone-call"></i>
               <h3>Call Me</h3>
-              <p>+1 5589 55488 55</p>
+              <p>+91 9566464807</p>
             </div>
           </div>
         </div>
