--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <!-- =======================================================
   * Template Name: Personal - v2.5.1
   * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
@@ -59,7 +66,7 @@
             <li class="active"><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Education</a></li>
-            <li><a href="#services">Recognition</a></li>
+            <li><a href="#recognition">Recognition</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -548,30 +555,7 @@
     </section>
     <!-- End About Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-        <div class="section-title">
-          <h2>Resume</h2>
-          <p>Check My Resume</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="timeline">
-              <div class="container left">
-                <div class="content">
-                  <h2>2010</h2>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Resume Section -->
-
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Education Section ======= -->
     <section id="services" class="services">
       <div class="container">
         <div class="section-title">
@@ -687,7 +671,113 @@
         </ul>
       </div>
     </section>
-    <!-- End Services Section -->
+    <!-- End Education Section -->
+
+    <!-- ======= Recognition Section ======= -->
+    <section id="recognition" class="services">
+      <div class="container">
+        <div class="section-title">
+          <h2>Recognition</h2>
+          <p>Apperciations & Recognitions</p>
+        </div>
+        <div class="container">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!--Navigation indicators-->
+            <ol class="carousel-indicators">
+              <li
+                data-target="#myCarousel"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!--Wrapper for slides-->
+            <div class="carousel-inner">
+              <div class="item active">
+                <img
+                  src="https://via.placeholder.com/1200x600.png"
+                  alt="Los Angeles"
+                  style="width: 100%"
+                />
+                <div class="carousel-caption">
+                  <h3>Recognition title</h3>
+                  <p>Year</p>
+                  <p>Description</p>
+                </div>
+              </div>
+
+              <div class="item">
+                <img
+                  src="https://via.placeholder.com/1200x600.png"
+                  alt="Chicago"
+                  style="width: 100%"
+                />
+                <div class="carousel-caption">
+                  <h3>Recognition title</h3>
+                  <p>Year</p>
+                  <p>Description</p>
+                </div>
+              </div>
+
+              <div class="item">
+                <img
+                  src="https://via.placeholder.com/1200x600.png"
+                  alt="New york"
+                  style="width: 100%"
+                />
+                <div class="carousel-caption">
+                  <h3>Recognition title</h3>
+                  <p>Year</p>
+                  <p>Description</p>
+                </div>
+              </div>
+            </div>
+            <!--Left and right controls-->
+            <a
+              class="left carousel-control"
+              href="#myCarousel"
+              data-slide="prev"
+            >
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="right carousel-control"
+              href="#myCarousel"
+              data-slide="next"
+            >
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Recognition Section -->
+
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container">
+        <div class="section-title">
+          <h2>Resume</h2>
+          <p>Check My Resume</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="timeline">
+              <div class="container left">
+                <div class="content">
+                  <h2>2010</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
