Resume section updated

--- a/index.html
+++ b/index.html
@@ -766,12 +766,13 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <div class="timeline">
-              <div class="container left">
-                <div class="content">
-                  <h2>2010</h2>
-                </div>
-              </div>
+            <div>
+              <iframe
+                src="http://www.africau.edu/images/default/sample.pdf#toolbar=0"
+                frameborder="0"
+                title="My Resume"
+                style="width: -webkit-fill-available"
+              ></iframe>
             </div>
           </div>
         </div>
