Resume section updated

--- a/index.html
+++ b/index.html
@@ -765,12 +765,11 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <div>
+            <div class="center-div">
               <iframe
-                src="http://www.africau.edu/images/default/sample.pdf#toolbar=0"
-                frameborder="0"
-                title="My Resume"
-                style="width: -webkit-fill-available"
+                src="https://drive.google.com/file/d/19w-Lb5ob4VgoD4XGS1IhTWX35TvmcZ2L/preview"
+                width="640"
+                height="700"
               ></iframe>
             </div>
           </div>
