--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li class="active"><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Education</a></li>
-            <li><a href="#recognition">Recognition</a></li>
+            <!-- <li><a href="#recognition">Recognition</a></li> -->
             <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -115,21 +115,20 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/me.jpg" class="img-fluid" alt="" />
+            <img src="assets/img/me.png" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Softaware Engineer</h3>
             <p class="font-italic">
-              My name is santhosh. I have always had an interest to know
-              anything about computers. I decided to become an Software Engineer
-              on my school days. That time with the same energy level, I have
-              created email address. That's my first successfull job in
-              computer.
+              My slef santhosh. I have always had an interest to know anything
+              about computers. I decided to become an Software Engineer on my
+              school days. That time with the same energy level, I have created
+              email address. That's my first successfull job in computer.
             </p>
             <p>
               I completed my master degree in Softaware Systems at KG College Of
               Arts And Science affiliated with bharathiar university. Started my
-              career as Intern Softaware Engineer, And now become mid level
+              career as Intern Softaware Engineer, And now i'm mid level
               softaware engineer.
             </p>
             <div class="row">
@@ -573,16 +572,14 @@
               </div>
               <div class="desc">
                 Completed SSLC at
-                <em>
-                  <a
-                    href="https://goo.gl/maps/Rqq1hc4YbUFKhzQy8"
-                    target="_blank"
-                    title="View my school"
-                  >
-                    Government Higher Secondary School, Kalapatti,
-                    Coimbatore-641035</a
-                  >
-                </em>
+                <a
+                  href="https://goo.gl/maps/Rqq1hc4YbUFKhzQy8"
+                  target="_blank"
+                  title="View my school"
+                >
+                  Government Higher Secondary School, Kalapatti,
+                  Coimbatore-641035</a
+                >
                 with
                 <em>
                   <a
@@ -767,7 +764,7 @@
           <div class="col-lg-12">
             <div class="center-div">
               <iframe
-                src="https://drive.google.com/file/d/19w-Lb5ob4VgoD4XGS1IhTWX35TvmcZ2L/preview"
+                src="https://drive.google.com/file/d/1m5E7Wv1f1C0EfVnNIX7T5X7_KPE8VjBk/preview"
                 width="640"
                 height="700"
               ></iframe>
@@ -800,17 +797,29 @@
               <i class="bx bx-share-alt"></i>
               <h3>Social Profiles</h3>
               <div class="social-links">
-                <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="#" class="facebook"
-                  ><i class="icofont-facebook"></i
+                <a
+                  href="https://github.com/santhosh-natarajan"
+                  class="twitter"
+                  target="blank"
+                  ><i class="icofont-github"></i
                 ></a>
-                <a href="#" class="instagram"
-                  ><i class="icofont-instagram"></i
+                <!-- <a href="#" class="facebook"><i class="icofont-facebook"></i></a> -->
+                <a
+                  href="https://stackoverflow.com/users/8854490/sanzmalz"
+                  class="instagram"
+                  target="blank"
+                  ><i class="icofont-stack-overflow"></i
                 ></a>
-                <a href="#" class="google-plus"
-                  ><i class="icofont-skype"></i
+                <a
+                  href="https://www.blogger.com/profile/03681801001667505013"
+                  class="google-plus"
+                  target="blank"
+                  ><i class="icofont-blogger"></i
                 ></a>
-                <a href="#" class="linkedin"
+                <a
+                  href="https://www.linkedin.com/in/santhosh-natarajan-0b67847a/"
+                  class="linkedin"
+                  target="blank"
                   ><i class="icofont-linkedin"></i
                 ></a>
               </div>
@@ -832,73 +841,6 @@
             </div>
           </div>
         </div>
-
-        <form
-          action="forms/contact.php"
-          method="post"
-          role="form"
-          class="php-email-form mt-4"
-        >
-          <div class="form-row">
-            <div class="col-md-6 form-group">
-              <input
-                type="text"
-                name="name"
-                class="form-control"
-                id="name"
-                placeholder="Your Name"
-                data-rule="minlen:4"
-                data-msg="Please enter at least 4 chars"
-              />
-              <div class="validate"></div>
-            </div>
-            <div class="col-md-6 form-group">
-              <input
-                type="email"
-                class="form-control"
-                name="email"
-                id="email"
-                placeholder="Your Email"
-                data-rule="email"
-                data-msg="Please enter a valid email"
-              />
-              <div class="validate"></div>
-            </div>
-          </div>
-          <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              name="subject"
-              id="subject"
-              placeholder="Subject"
-              data-rule="minlen:4"
-              data-msg="Please enter at least 8 chars of subject"
-            />
-            <div class="validate"></div>
-          </div>
-          <div class="form-group">
-            <textarea
-              class="form-control"
-              name="message"
-              rows="5"
-              data-rule="required"
-              data-msg="Please write something for us"
-              placeholder="Message"
-            ></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">
-              Your message has been sent. Thank you!
-            </div>
-          </div>
-          <div class="text-center">
-            <button type="submit">Send Message</button>
-          </div>
-        </form>
       </div>
     </section>
     <!-- End Contact Section -->
