--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <!-- <li><a href="#recognition">Recognition</a></li> -->
             <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#activities">Activities</a></li>
           </ul>
         </nav>
         <!-- .nav-menu -->
@@ -118,7 +119,7 @@
             <img src="assets/img/me.png" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Softaware Engineer</h3>
+            <h3>software Engineer</h3>
             <p class="font-italic">
               My slef santhosh. I have always had an interest to know anything
               about computers. I decided to become an Software Engineer on my
@@ -126,10 +127,10 @@
               email address. That's my first successfull job in computer.
             </p>
             <p>
-              I completed my master degree in Softaware Systems at KG College Of
+              I completed my master degree in software Systems at KG College Of
               Arts And Science affiliated with bharathiar university. Started my
-              career as Intern Softaware Engineer, And now i'm mid level
-              softaware engineer.
+              career as Intern software Engineer, And now i'm mid level software
+              engineer.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -148,7 +149,7 @@
                 <ul>
                   <li>
                     <i class="icofont-rounded-right"></i>
-                    <strong>Degree:</strong> M.Sc Softaware Systems
+                    <strong>Degree:</strong> M.Sc software Systems
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
@@ -639,7 +640,7 @@
                 >
               </div>
               <div class="desc">
-                Completed Master of Science in Softaware Systems (5 years
+                Completed Master of Science in software Systems (5 years
                 integrated) at
                 <em>
                   <a
@@ -775,6 +776,8 @@
     </section>
     <!-- End Resume Section -->
 
+    <section id="activities"></section>
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -788,7 +791,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>My Address</h3>
-              <p>3/21, Bharathi Street, Vilankurichi, Coimbatore - 641035</p>
+              <p>3/21, Bharathi Street, Vilankurichi, Coimbatore - 641035,TN</p>
             </div>
           </div>
 
