--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- <li><a href="#recognition">Recognition</a></li> -->
             <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#activities">Activities</a></li>
+            <!-- <li><a href="#activities">Activities</a></li> -->
           </ul>
         </nav>
         <!-- .nav-menu -->
