project section updated

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <li><a href="#services">Education</a></li>
             <!-- <li><a href="#recognition">Recognition</a></li> -->
             <li><a href="#resume">Resume</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <!-- <li><a href="#activities">Activities</a></li> -->
           </ul>
@@ -748,6 +749,27 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="container">
+        <div class="jumbotron" style="color: black">
+          <h1>#1 NPM</h1>
+          <h2 style="color: #18d26e">SnNavbarB</h2>
+          <p>
+            This module gives the top fixed, responsive and custom bootstrap
+            navbar for the angular + bootstrap applications
+          </p>
+          <p>
+            <a
+              class="btn btn-primary btn-lg primary-color"
+              href="https://www.npmjs.com/package/sn-navbar-b"
+              target="_blank"
+              >View Package
+            </a>
+          </p>
         </div>
       </div>
     </section>
