address spelling updated

--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>My Address</h3>
-              <p>3/21, Bharathi Street, Vilankurichi, Coimbatore - 641035,TN</p>
+              <p>3/21, Bharathy Street, Vilankurichi, Coimbatore - 641035,TN</p>
             </div>
           </div>
 
