medium icon added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
             target="blank"
             ><i class="icofont-linkedin"></i
           ></a>
+          <a
+            href="https://medium.com/@santhosh.swengineer"
+            class="linkedin"
+            target="blank"
+            title="medium"
+            ><i class="icofont-web"></i
+          ></a>
         </div>
       </div>
     </header>
@@ -120,7 +127,7 @@
             <img src="assets/img/me.png" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>software Engineer</h3>
+            <h3>Software Engineer</h3>
             <p class="font-italic">
               My slef santhosh. I have always had an interest to know anything
               about computers. I decided to become an Software Engineer on my
