--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">REACT.JS<i class="val">40%</i></span>
+              <span class="skill">REACT JS<i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -351,7 +351,7 @@
 
           <div class="col-lg-6">
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div
                   class="progress-bar"
@@ -396,6 +396,19 @@
                   class="progress-bar"
                   role="progressbar"
                   aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">MYSQL <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="50"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 ></div>
