--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
             <div class="info-box">
               <i class="bx bx-phone-call"></i>
               <h3>Call Me</h3>
-              <p>+91 9566464807</p>
+              <a href="tel:+91 9566464807">+91 9566464807</p>
             </div>
           </div>
         </div>
