--- a/index.html
+++ b/index.html
@@ -795,9 +795,10 @@
           <div class="col-lg-12">
             <div class="center-div">
               <iframe
-                src="https://drive.google.com/file/d/1TnzpmgbtF8Wuem1AALeCfjToAvWlVyaJ/preview"
+                src="https://drive.google.com/file/d/1gaAjqLEZng6L-nSdylaL02rUiNGs7Mjy/preview"
                 width="640"
                 height="700"
+                allow="autoplay"
               ></iframe>
             </div>
           </div>
