Professional page added

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
             <li class="active"><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Education</a></li>
-            <!-- <li><a href="#recognition">Recognition</a></li> -->
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="profession.html">Profession</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
-            <!-- <li><a href="#activities">Activities</a></li> -->
           </ul>
         </nav>
         <!-- .nav-menu -->
@@ -678,7 +677,6 @@
       </div>
     </section>
     <!-- End Education Section -->
-
     <!-- ======= Recognition Section ======= -->
     <section id="recognition" class="services">
       <div class="container">
@@ -807,7 +805,6 @@
     </section>
     <!-- End Resume Section -->
 
-    <section id="activities"></section>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
