--- a/profession.html
+++ b/profession.html
@@ -159,6 +159,6 @@
             </div>
         </div>
     </main>
-    <script src="/assets/js/prof.js" type="module"></script>
+    <script src="./assets/js/prof.js" type="module"></script>
 </body>
 </html>
