--- a/profession.html
+++ b/profession.html
@@ -105,28 +105,28 @@
                             </thead>
                             <tbody>
                               <tr>
-                                <td><img src="/assets/img/prof/mile_01.png" alt="" srcset="" style="width: 70px;"></td>
+                                <td><img src="./assets/img/prof/mile_01.png" alt="" srcset="" style="width: 70px;"></td>
                                 <td><a href="https://www.pinnacleseven.com/" target="_blank">Pinnacle seven technologies</a></td>
                                 <td>Intern Software Engineer</td>
                                 <td>March 2016</td>
                                 <td>Feburary 2017</td>
                               </tr>
                               <tr>
-                                <td><img src="/assets/img/prof/mile_02.png" alt="" srcset="" style="width: 70px;"></td>
+                                <td><img src="./assets/img/prof/mile_02.png" alt="" srcset="" style="width: 70px;"></td>
                                 <td><a href="https://www.pinnacleseven.com/" target="_blank">Pinnacle seven technologies</a></td>
                                 <td>Junior Software Engineer</td>
                                 <td>March 2017</td>
                                 <td>March 2019</td>  
                               </tr>
                               <tr>
-                                <td><img src="/assets/img/prof/mile_03.png" alt="" srcset="" style="width: 70px;"></td>
+                                <td><img src="./assets/img/prof/mile_03.png" alt="" srcset="" style="width: 70px;"></td>
                                 <td><a href="https://www.pinnacleseven.com/" target="_blank">Pinnacle seven technologies</a></td>
                                 <td>Software Engineer</td>
                                 <td>March 2019</td>
                                 <td>March 2022</td>  
                               </tr>
                               <tr>
-                                <td><img src="/assets/img/prof/mile_04.png" alt="" srcset="" style="width: 70px;"></td>
+                                <td><img src="./assets/img/prof/mile_04.png" alt="" srcset="" style="width: 70px;"></td>
                                 <td><a href="https://softworkstech.com/" target="_blank">Softworks technologies</a></td>
                                 <td>Senior Software Engineer</td>
                                 <td>April 2022</td>
