--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#services">Education</a></li>
             <li><a href="profession.html">Profession</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <!-- <li><a href="#projects">Projects</a></li> -->
             <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -877,12 +877,13 @@
     <!-- End Contact Section -->
 
     <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
+      v1.1.0
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
       <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
     </div>
+    
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
