--- a/profession.html
+++ b/profession.html
@@ -46,7 +46,7 @@
                   <li><a href="index.html#about">About</a></li>
                   <li><a href="index.html#services">Education</a></li>
                   <li class="active"><a href="profession.html">Profession</a></li>
-                  <li><a href="index.html#projects">Projects</a></li>
+                  <!-- <li><a href="index.html#projects">Projects</a></li> -->
                   <li><a href="index.html#resume">Resume</a></li>
                   <li><a href="index.html#contact">Contact</a></li>
                 </ul>
@@ -86,7 +86,7 @@
                     <li class="active"><a class="tab-title" data-toggle="tab" href="#milestone">Milestones</a></li>
                     <li><a class="tab-title" data-toggle="tab" href="#award">Awards & Recognition</a></li>
                     <li><a class="tab-title" data-toggle="tab" href="#goal">Monthly Goals</a></li>
-                    <li><a class="tab-title" data-toggle="tab" href="#weekly">Weekly Activities</a></li>
+                    <!-- <li><a class="tab-title" data-toggle="tab" href="#weekly">Weekly Activities</a></li> -->
                 </ul>
 
                 <div class="tab-content">
