Profession detail updated

--- a/profession.html
+++ b/profession.html
@@ -131,6 +131,13 @@
                                 <td><a href="https://softworkstech.com/" target="_blank">Softworks technologies</a></td>
                                 <td>Senior Software Engineer</td>
                                 <td>April 2022</td>
+                                <td>November 2022</td>  
+                              </tr>
+                              <tr>
+                                <td><img src="./assets/img/prof/mile_05.png" alt="" srcset="" style="width: 70px;"></td>
+                                <td><a href="https://dyooti.com/" target="_blank">Dyooti Inc</a></td>
+                                <td>Senior Software Engineer</td>
+                                <td>November 2022</td>
                                 <td>Till date</td>  
                               </tr>
                             </tbody>
