--- a/profession.html
+++ b/profession.html
@@ -85,7 +85,7 @@
                 <ul class="nav nav-tabs">
                     <li class="active"><a class="tab-title" data-toggle="tab" href="#milestone">Milestones</a></li>
                     <li><a class="tab-title" data-toggle="tab" href="#award">Awards & Recognition</a></li>
-                    <li><a class="tab-title" data-toggle="tab" href="#goal">Monthly Goals</a></li>
+                    <!-- <li><a class="tab-title" data-toggle="tab" href="#goal">Monthly Goals</a></li> -->
                     <!-- <li><a class="tab-title" data-toggle="tab" href="#weekly">Weekly Activities</a></li> -->
                 </ul>
 
@@ -131,13 +131,6 @@
                                 <td><a href="https://softworkstech.com/" target="_blank">Softworks technologies</a></td>
                                 <td>Senior Software Engineer</td>
                                 <td>April 2022</td>
-                                <td>November 2022</td>  
-                              </tr>
-                              <tr>
-                                <td><img src="./assets/img/prof/mile_05.png" alt="" srcset="" style="width: 70px;"></td>
-                                <td><a href="https://dyooti.com/" target="_blank">Dyooti Inc</a></td>
-                                <td>Senior Software Engineer</td>
-                                <td>November 2022</td>
                                 <td>Till date</td>  
                               </tr>
                             </tbody>
@@ -149,7 +142,7 @@
                         </div>
                         <div id="profCard"></div>
                     </div>
-                    <div id="goal" class="tab-pane fade">
+                    <!-- <div id="goal" class="tab-pane fade">
                             <div id="goalCard" class="goal-card-container"></div> 
                     </div>
                     <div id="weekly" class="tab-pane fade">
@@ -162,7 +155,7 @@
                             <tbody id="weeklyActivities">
                             </tbody>
                         </table>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
